--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-intersection-observer": "^9.14.0",
     "server-only": "^0.0.1",
     "superjson": "^2.2.2",
     "tailwind-merge": "^2.5.5",
