--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.4",
     "@t3-oss/env-nextjs": "^0.11.1",
-    "@tanstack/react-query": "^5.62.8",
     "@trpc/client": "11.0.0-rc.666",
     "@trpc/react-query": "11.0.0-rc.666",
     "@trpc/server": "11.0.0-rc.666",
@@ -42,6 +41,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-intersection-observer": "^9.14.0",
+    "react-query": "npm:@tanstack/react-query@5.62.8",
     "server-only": "^0.0.1",
     "superjson": "^2.2.2",
     "tailwind-merge": "^2.5.5",
