--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@trpc/server": "11.0.0-rc.666",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.13",
     "drizzle-orm": "^0.38.2",
     "geist": "^1.3.1",
     "lucide-react": "^0.469.0",
